--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div id="info_display"></div>
     <div id="wrapper">
-            <canvas id="c1" width="800" height="600"></canvas>
-            <canvas id="c2" width="800" height="600"></canvas>
-            <canvas id="c3" width="800" height="600"></canvas>
-            
+            <canvas id="c1" width="800" height="660"></canvas>
+            <canvas id="c2" width="800" height="660"></canvas>
+            <canvas id="c3" width="800" height="660"></canvas> 
     </div>
     <div><input type="button" value="Reseed" id="gl"/></div>
     <script type="module" src="main.js"></script>
